@@ -32,6 +32,7 @@
     <File name="Hyena.Widgets/RoundedFrame.cs" subtype="Code" buildaction="Compile" />
     <File name="Hyena.Gui.Theatrics/Actor.cs" subtype="Code" buildaction="Compile" />
     <File name="Hyena.Gui.Theatrics/Stage.cs" subtype="Code" buildaction="Compile" />
+    <File name="Hyena.Gui.Theatrics/SingleActorStage.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
